--- a/guitar_website/package.json
+++ b/guitar_website/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "pdfjs": "^2.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
