--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
