--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "framer-motion": "^11.3.19",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
