--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.3.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-pdf": "^9.1.0"
   },
   "devDependencies": {
